fixed horizontal scroll's bug in footer

--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -30,10 +30,10 @@
             font-size: 0.9rem;
             margin-top: 7.4rem;
             padding-top: 2rem;
-            margin-left: -50%;
-            margin-right: -50%;
-            padding-left: 50%;
-            padding-right: 50%;
+            margin-left: -10rem;
+            margin-right: -10rem;
+            padding-left: 10rem;
+            padding-right: 10rem;
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
